--- a/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
+++ b/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vehicule_Logic\Etat.cs" />
+    <Compile Include="Vehicule_Logic\SystemeDeVehicule.cs" />
+    <Compile Include="Vehicule_Logic\Vehicule.cs" />
     <Compile Include="Vehicule_UI\GestionVehiculeForm.cs">
       <SubType>Form</SubType>
     </Compile>
