Affichage vehicule et SystemeGeneral
+ Les vehicule s'affiche dans la form de gestion de vehicules
+ Ajouter donne hardcoder dans le constructeur de systemeVehicule
+ Ajouter un sytemeGeneral qui va avoir une instance de tous les autres systemes

--- a/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
+++ b/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
@@ -46,9 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SystemeGeneral.cs" />
     <Compile Include="Vehicule_Logic\Etat.cs" />
     <Compile Include="Vehicule_Logic\SystemeDeVehicule.cs" />
     <Compile Include="Vehicule_Logic\Vehicule.cs" />
+    <Compile Include="Vehicule_Logic\Voiture.cs" />
     <Compile Include="Vehicule_UI\GestionVehiculeForm.cs">
       <SubType>Form</SubType>
     </Compile>
