--- a/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
+++ b/wfa_MDD_TP3/wfa_MDD_TP3/wfa_MDD_TP3.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Connexion.Designer.cs">
       <DependentUpon>Connexion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Connexion_Logic\Utilisateur.cs" />
+    <Compile Include="Connexion_Logic\UtilisateurManager.cs" />
     <Compile Include="Location_Logic\Etat.cs" />
     <Compile Include="Location_Logic\Inspection.cs" />
     <Compile Include="Location_Logic\Location.cs" />
